carlos.cirello/qlang/parser/y.output

state 0
	$accept: .top $end 

	FormToken  shift 3
	.  error

	top  goto 1
	questionaire  goto 2

state 1
	$accept:  top.$end 

	$end  accept
	.  error


state 2
	top:  questionaire.    (1)

	.  reduce 1 (src line 67)


state 3
	questionaire:  FormToken.TextToken '{' stack '}' 

	TextToken  shift 4
	.  error


state 4
	questionaire:  FormToken TextToken.'{' stack '}' 

	'{'  shift 5
	.  error


state 5
	questionaire:  FormToken TextToken '{'.stack '}' 
	stack: .    (3)

	.  reduce 3 (src line 81)

	stack  goto 6

state 6
	questionaire:  FormToken TextToken '{' stack.'}' 
	stack:  stack.question 
	stack:  stack.ifBlock 

	IfToken  shift 11
	QuotedStringToken  shift 10
	'}'  shift 7
	.  error

	question  goto 8
	ifBlock  goto 9

state 7
	questionaire:  FormToken TextToken '{' stack '}'.    (2)

	.  reduce 2 (src line 74)


state 8
	stack:  stack question.    (4)

	.  reduce 4 (src line 82)


state 9
	stack:  stack ifBlock.    (5)

	.  reduce 5 (src line 90)


state 10
	question:  QuotedStringToken.TextToken questionType 

	TextToken  shift 12
	.  error


state 11
	ifBlock:  IfToken.'(' andOrBlock ')' '{' stack '}' 
	ifBlock:  IfToken.'(' andOrBlock ')' '{' stack '}' ElseToken ifBlock 
	ifBlock:  IfToken.'(' andOrBlock ')' '{' stack '}' ElseToken '{' stack '}' 

	'('  shift 13
	.  error


state 12
	question:  QuotedStringToken TextToken.questionType 

	TextToken  shift 15
	ComputedQuestionToken  shift 16
	.  error

	questionType  goto 14

state 13
	ifBlock:  IfToken '('.andOrBlock ')' '{' stack '}' 
	ifBlock:  IfToken '('.andOrBlock ')' '{' stack '}' ElseToken ifBlock 
	ifBlock:  IfToken '('.andOrBlock ')' '{' stack '}' ElseToken '{' stack '}' 

	QuotedStringToken  shift 25
	TextToken  shift 24
	'('  shift 21
	'!'  shift 20
	NumericToken  shift 23
	BoolTrueToken  shift 26
	BoolFalseToken  shift 27
	.  error

	term  goto 19
	andOrBlock  goto 17
	evaluatable  goto 18
	value  goto 22

state 14
	question:  QuotedStringToken TextToken questionType.    (6)

	.  reduce 6 (src line 100)


state 15
	questionType:  TextToken.    (7)

	.  reduce 7 (src line 108)


state 16
	questionType:  ComputedQuestionToken.'=' term 

	'='  shift 28
	.  error


state 17
	ifBlock:  IfToken '(' andOrBlock.')' '{' stack '}' 
	ifBlock:  IfToken '(' andOrBlock.')' '{' stack '}' ElseToken ifBlock 
	ifBlock:  IfToken '(' andOrBlock.')' '{' stack '}' ElseToken '{' stack '}' 

	')'  shift 29
	.  error


state 18
	andOrBlock:  evaluatable.BoolAndToken evaluatable 
	andOrBlock:  evaluatable.BoolOrToken evaluatable 
	andOrBlock:  evaluatable.    (14)

	BoolAndToken  shift 30
	BoolOrToken  shift 31
	.  reduce 14 (src line 166)


state 19
	evaluatable:  term.EqualsToToken term 
	evaluatable:  term.NotEqualsToToken term 
	evaluatable:  term.MoreThanToken term 
	evaluatable:  term.LessThanToken term 
	evaluatable:  term.MoreOrEqualsThanToken term 
	evaluatable:  term.LessOrEqualsThanToken term 
	evaluatable:  term.    (22)
	term:  term.'+' term 
	term:  term.'-' term 
	term:  term.'*' term 
	term:  term.'/' term 

	'+'  shift 38
	'-'  shift 39
	'*'  shift 40
	'/'  shift 41
	LessThanToken  shift 35
	LessOrEqualsThanToken  shift 37
	MoreThanToken  shift 34
	MoreOrEqualsThanToken  shift 36
	EqualsToToken  shift 32
	NotEqualsToToken  shift 33
	.  reduce 22 (src line 198)


state 20
	evaluatable:  '!'.evaluatable 

	QuotedStringToken  shift 25
	TextToken  shift 24
	'('  shift 21
	'!'  shift 20
	NumericToken  shift 23
	BoolTrueToken  shift 26
	BoolFalseToken  shift 27
	.  error

	term  goto 19
	evaluatable  goto 42
	value  goto 22

state 21
	term:  '('.andOrBlock ')' 

	QuotedStringToken  shift 25
	TextToken  shift 24
	'('  shift 21
	'!'  shift 20
	NumericToken  shift 23
	BoolTrueToken  shift 26
	BoolFalseToken  shift 27
	.  error

	term  goto 19
	andOrBlock  goto 43
	evaluatable  goto 18
	value  goto 22

state 22
	term:  value.    (28)

	.  reduce 28 (src line 222)


state 23
	value:  NumericToken.    (29)

	.  reduce 29 (src line 229)


state 24
	value:  TextToken.    (30)

	.  reduce 30 (src line 243)


state 25
	value:  QuotedStringToken.    (31)

	.  reduce 31 (src line 254)


state 26
	value:  BoolTrueToken.    (32)

	.  reduce 32 (src line 265)


state 27
	value:  BoolFalseToken.    (33)

	.  reduce 33 (src line 276)


state 28
	questionType:  ComputedQuestionToken '='.term 

	QuotedStringToken  shift 25
	TextToken  shift 24
	'('  shift 21
	NumericToken  shift 23
	BoolTrueToken  shift 26
	BoolFalseToken  shift 27
	.  error

	term  goto 44
	value  goto 22

state 29
	ifBlock:  IfToken '(' andOrBlock ')'.'{' stack '}' 
	ifBlock:  IfToken '(' andOrBlock ')'.'{' stack '}' ElseToken ifBlock 
	ifBlock:  IfToken '(' andOrBlock ')'.'{' stack '}' ElseToken '{' stack '}' 

	'{'  shift 45
	.  error


state 30
	andOrBlock:  evaluatable BoolAndToken.evaluatable 

	QuotedStringToken  shift 25
	TextToken  shift 24
	'('  shift 21
	'!'  shift 20
	NumericToken  shift 23
	BoolTrueToken  shift 26
	BoolFalseToken  shift 27
	.  error

	term  goto 19
	evaluatable  goto 46
	value  goto 22

state 31
	andOrBlock:  evaluatable BoolOrToken.evaluatable 

	QuotedStringToken  shift 25
	TextToken  shift 24
	'('  shift 21
	'!'  shift 20
	NumericToken  shift 23
	BoolTrueToken  shift 26
	BoolFalseToken  shift 27
	.  error

	term  goto 19
	evaluatable  goto 47
	value  goto 22

state 32
	evaluatable:  term EqualsToToken.term 

	QuotedStringToken  shift 25
	TextToken  shift 24
	'('  shift 21
	NumericToken  shift 23
	BoolTrueToken  shift 26
	BoolFalseToken  shift 27
	.  error

	term  goto 48
	value  goto 22

state 33
	evaluatable:  term NotEqualsToToken.term 

	QuotedStringToken  shift 25
	TextToken  shift 24
	'('  shift 21
	NumericToken  shift 23
	BoolTrueToken  shift 26
	BoolFalseToken  shift 27
	.  error

	term  goto 49
	value  goto 22

state 34
	evaluatable:  term MoreThanToken.term 

	QuotedStringToken  shift 25
	TextToken  shift 24
	'('  shift 21
	NumericToken  shift 23
	BoolTrueToken  shift 26
	BoolFalseToken  shift 27
	.  error

	term  goto 50
	value  goto 22

state 35
	evaluatable:  term LessThanToken.term 

	QuotedStringToken  shift 25
	TextToken  shift 24
	'('  shift 21
	NumericToken  shift 23
	BoolTrueToken  shift 26
	BoolFalseToken  shift 27
	.  error

	term  goto 51
	value  goto 22

state 36
	evaluatable:  term MoreOrEqualsThanToken.term 

	QuotedStringToken  shift 25
	TextToken  shift 24
	'('  shift 21
	NumericToken  shift 23
	BoolTrueToken  shift 26
	BoolFalseToken  shift 27
	.  error

	term  goto 52
	value  goto 22

state 37
	evaluatable:  term LessOrEqualsThanToken.term 

	QuotedStringToken  shift 25
	TextToken  shift 24
	'('  shift 21
	NumericToken  shift 23
	BoolTrueToken  shift 26
	BoolFalseToken  shift 27
	.  error

	term  goto 53
	value  goto 22

state 38
	term:  term '+'.term 

	QuotedStringToken  shift 25
	TextToken  shift 24
	'('  shift 21
	NumericToken  shift 23
	BoolTrueToken  shift 26
	BoolFalseToken  shift 27
	.  error

	term  goto 54
	value  goto 22

state 39
	term:  term '-'.term 

	QuotedStringToken  shift 25
	TextToken  shift 24
	'('  shift 21
	NumericToken  shift 23
	BoolTrueToken  shift 26
	BoolFalseToken  shift 27
	.  error

	term  goto 55
	value  goto 22

state 40
	term:  term '*'.term 

	QuotedStringToken  shift 25
	TextToken  shift 24
	'('  shift 21
	NumericToken  shift 23
	BoolTrueToken  shift 26
	BoolFalseToken  shift 27
	.  error

	term  goto 56
	value  goto 22

state 41
	term:  term '/'.term 

	QuotedStringToken  shift 25
	TextToken  shift 24
	'('  shift 21
	NumericToken  shift 23
	BoolTrueToken  shift 26
	BoolFalseToken  shift 27
	.  error

	term  goto 57
	value  goto 22

state 42
	evaluatable:  '!' evaluatable.    (21)

	.  reduce 21 (src line 194)


state 43
	term:  '(' andOrBlock.')' 

	')'  shift 58
	.  error


state 44
	questionType:  ComputedQuestionToken '=' term.    (8)
	term:  term.'+' term 
	term:  term.'-' term 
	term:  term.'*' term 
	term:  term.'/' term 

	'+'  shift 38
	'-'  shift 39
	'*'  shift 40
	'/'  shift 41
	.  reduce 8 (src line 113)


state 45
	ifBlock:  IfToken '(' andOrBlock ')' '{'.stack '}' 
	ifBlock:  IfToken '(' andOrBlock ')' '{'.stack '}' ElseToken ifBlock 
	ifBlock:  IfToken '(' andOrBlock ')' '{'.stack '}' ElseToken '{' stack '}' 
	stack: .    (3)

	.  reduce 3 (src line 81)

	stack  goto 59

state 46
	andOrBlock:  evaluatable BoolAndToken evaluatable.    (12)

	.  reduce 12 (src line 157)


state 47
	andOrBlock:  evaluatable BoolOrToken evaluatable.    (13)

	.  reduce 13 (src line 162)


state 48
	evaluatable:  term EqualsToToken term.    (15)
	term:  term.'+' term 
	term:  term.'-' term 
	term:  term.'*' term 
	term:  term.'/' term 

	'+'  shift 38
	'-'  shift 39
	'*'  shift 40
	'/'  shift 41
	.  reduce 15 (src line 169)


state 49
	evaluatable:  term NotEqualsToToken term.    (16)
	term:  term.'+' term 
	term:  term.'-' term 
	term:  term.'*' term 
	term:  term.'/' term 

	'+'  shift 38
	'-'  shift 39
	'*'  shift 40
	'/'  shift 41
	.  reduce 16 (src line 174)


state 50
	evaluatable:  term MoreThanToken term.    (17)
	term:  term.'+' term 
	term:  term.'-' term 
	term:  term.'*' term 
	term:  term.'/' term 

	'+'  shift 38
	'-'  shift 39
	'*'  shift 40
	'/'  shift 41
	.  reduce 17 (src line 178)


state 51
	evaluatable:  term LessThanToken term.    (18)
	term:  term.'+' term 
	term:  term.'-' term 
	term:  term.'*' term 
	term:  term.'/' term 

	'+'  shift 38
	'-'  shift 39
	'*'  shift 40
	'/'  shift 41
	.  reduce 18 (src line 182)


state 52
	evaluatable:  term MoreOrEqualsThanToken term.    (19)
	term:  term.'+' term 
	term:  term.'-' term 
	term:  term.'*' term 
	term:  term.'/' term 

	'+'  shift 38
	'-'  shift 39
	'*'  shift 40
	'/'  shift 41
	.  reduce 19 (src line 186)


state 53
	evaluatable:  term LessOrEqualsThanToken term.    (20)
	term:  term.'+' term 
	term:  term.'-' term 
	term:  term.'*' term 
	term:  term.'/' term 

	'+'  shift 38
	'-'  shift 39
	'*'  shift 40
	'/'  shift 41
	.  reduce 20 (src line 190)


state 54
	term:  term.'+' term 
	term:  term '+' term.    (23)
	term:  term.'-' term 
	term:  term.'*' term 
	term:  term.'/' term 

	'*'  shift 40
	'/'  shift 41
	.  reduce 23 (src line 201)


state 55
	term:  term.'+' term 
	term:  term.'-' term 
	term:  term '-' term.    (24)
	term:  term.'*' term 
	term:  term.'/' term 

	'*'  shift 40
	'/'  shift 41
	.  reduce 24 (src line 206)


state 56
	term:  term.'+' term 
	term:  term.'-' term 
	term:  term.'*' term 
	term:  term '*' term.    (25)
	term:  term.'/' term 

	.  reduce 25 (src line 210)


state 57
	term:  term.'+' term 
	term:  term.'-' term 
	term:  term.'*' term 
	term:  term.'/' term 
	term:  term '/' term.    (26)

	.  reduce 26 (src line 214)


state 58
	term:  '(' andOrBlock ')'.    (27)

	.  reduce 27 (src line 218)


state 59
	stack:  stack.question 
	stack:  stack.ifBlock 
	ifBlock:  IfToken '(' andOrBlock ')' '{' stack.'}' 
	ifBlock:  IfToken '(' andOrBlock ')' '{' stack.'}' ElseToken ifBlock 
	ifBlock:  IfToken '(' andOrBlock ')' '{' stack.'}' ElseToken '{' stack '}' 

	IfToken  shift 11
	QuotedStringToken  shift 10
	'}'  shift 60
	.  error

	question  goto 8
	ifBlock  goto 9

state 60
	ifBlock:  IfToken '(' andOrBlock ')' '{' stack '}'.    (9)
	ifBlock:  IfToken '(' andOrBlock ')' '{' stack '}'.ElseToken ifBlock 
	ifBlock:  IfToken '(' andOrBlock ')' '{' stack '}'.ElseToken '{' stack '}' 

	ElseToken  shift 61
	.  reduce 9 (src line 119)


state 61
	ifBlock:  IfToken '(' andOrBlock ')' '{' stack '}' ElseToken.ifBlock 
	ifBlock:  IfToken '(' andOrBlock ')' '{' stack '}' ElseToken.'{' stack '}' 

	IfToken  shift 11
	'{'  shift 63
	.  error

	ifBlock  goto 62

state 62
	ifBlock:  IfToken '(' andOrBlock ')' '{' stack '}' ElseToken ifBlock.    (10)

	.  reduce 10 (src line 129)


state 63
	ifBlock:  IfToken '(' andOrBlock ')' '{' stack '}' ElseToken '{'.stack '}' 
	stack: .    (3)

	.  reduce 3 (src line 81)

	stack  goto 64

state 64
	stack:  stack.question 
	stack:  stack.ifBlock 
	ifBlock:  IfToken '(' andOrBlock ')' '{' stack '}' ElseToken '{' stack.'}' 

	IfToken  shift 11
	QuotedStringToken  shift 10
	'}'  shift 65
	.  error

	question  goto 8
	ifBlock  goto 9

state 65
	ifBlock:  IfToken '(' andOrBlock ')' '{' stack '}' ElseToken '{' stack '}'.    (11)

	.  reduce 11 (src line 139)


37 terminals, 11 nonterminals
34 grammar rules, 66/2000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
60 working sets used
memory: parser 47/30000
17 extra closures
168 shift entries, 1 exceptions
28 goto entries
24 entries saved by goto default
Optimizer space used: output 82/30000
82 table entries, 0 zero
maximum spread: 37, maximum offset: 63
